exports[`prefer-direct-iteration > invalid(1): for (const item of [1, 2, 3].values()) {} 1`] = `

  1 | for (const item of [1, 2, 3].values()) {}

`;

exports[`prefer-direct-iteration > invalid(1): for (const item of [1, 2, 3].values()) {} 2`] = `

Message:
> 1 | for (const item of [1, 2, 3].values()) {}
    |                              ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | for (const item of [1, 2, 3]) {}

`;

exports[`prefer-direct-iteration > invalid(1): type Items = string[]; function foo(items: Items) { return [...items.values()]; } 1`] = `

Filename: file.ts

  1 | type Items = string[]; function foo(items: Items) { return [...items.values()]; }

`;

exports[`prefer-direct-iteration > invalid(1): type Items = string[]; function foo(items: Items) { return [...items.values()]; } 2`] = `

Message:
> 1 | type Items = string[]; function foo(items: Items) { return [...items.values()]; }
    |                                                                      ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | type Items = string[]; function foo(items: Items) { return [...items]; }

`;

exports[`prefer-direct-iteration > invalid(10): declare function useState<T>(initial: T): [T, (value: T) => void];\nconst [map] = useState(new Map<string, string>());\n[...map.entries()]; 1`] = `

Filename: file.ts

  1 | declare function useState<T>(initial: T): [T, (value: T) => void];
  2 | const [map] = useState(new Map<string, string>());
  3 | [...map.entries()];

`;

exports[`prefer-direct-iteration > invalid(10): declare function useState<T>(initial: T): [T, (value: T) => void];\nconst [map] = useState(new Map<string, string>());\n[...map.entries()]; 2`] = `

Message:
  1 | declare function useState<T>(initial: T): [T, (value: T) => void];
  2 | const [map] = useState(new Map<string, string>());
> 3 | [...map.entries()];
    |         ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | declare function useState<T>(initial: T): [T, (value: T) => void];
  2 | const [map] = useState(new Map<string, string>());
  3 | [...map];

`;

exports[`prefer-direct-iteration > invalid(10): new Map(new Map().entries()) 1`] = `

  1 | new Map(new Map().entries())

`;

exports[`prefer-direct-iteration > invalid(10): new Map(new Map().entries()) 2`] = `

Message:
> 1 | new Map(new Map().entries())
    |                   ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | new Map(new Map())

`;

exports[`prefer-direct-iteration > invalid(11): const {0: map} = [new Map<string, string>()]; [...map.entries()]; 1`] = `

Filename: file.ts

  1 | const {0: map} = [new Map<string, string>()]; [...map.entries()];

`;

exports[`prefer-direct-iteration > invalid(11): const {0: map} = [new Map<string, string>()]; [...map.entries()]; 2`] = `

Message:
> 1 | const {0: map} = [new Map<string, string>()]; [...map.entries()];
    |                                                       ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | const {0: map} = [new Map<string, string>()]; [...map];

`;

exports[`prefer-direct-iteration > invalid(11): new WeakMap(new Map().entries()) 1`] = `

  1 | new WeakMap(new Map().entries())

`;

exports[`prefer-direct-iteration > invalid(11): new WeakMap(new Map().entries()) 2`] = `

Message:
> 1 | new WeakMap(new Map().entries())
    |                       ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | new WeakMap(new Map())

`;

exports[`prefer-direct-iteration > invalid(12): const [set] = [new Set<string>()]; [...set.values()]; 1`] = `

Filename: file.ts

  1 | const [set] = [new Set<string>()]; [...set.values()];

`;

exports[`prefer-direct-iteration > invalid(12): const [set] = [new Set<string>()]; [...set.values()]; 2`] = `

Message:
> 1 | const [set] = [new Set<string>()]; [...set.values()];
    |                                            ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | const [set] = [new Set<string>()]; [...set];

`;

exports[`prefer-direct-iteration > invalid(12): new WeakSet(new Set().values()) 1`] = `

  1 | new WeakSet(new Set().values())

`;

exports[`prefer-direct-iteration > invalid(12): new WeakSet(new Set().values()) 2`] = `

Message:
> 1 | new WeakSet(new Set().values())
    |                       ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | new WeakSet(new Set())

`;

exports[`prefer-direct-iteration > invalid(13): const [set] = [new Set<string>()]; [...set.keys()]; 1`] = `

Filename: file.ts

  1 | const [set] = [new Set<string>()]; [...set.keys()];

`;

exports[`prefer-direct-iteration > invalid(13): const [set] = [new Set<string>()]; [...set.keys()]; 2`] = `

Message:
> 1 | const [set] = [new Set<string>()]; [...set.keys()];
    |                                            ^^^^ Prefer direct iteration instead of \`.keys()\`.

Output:
  1 | const [set] = [new Set<string>()]; [...set];

`;

exports[`prefer-direct-iteration > invalid(13): new Set(Array.from(array).values()) 1`] = `

  1 | new Set(Array.from(array).values())

`;

exports[`prefer-direct-iteration > invalid(13): new Set(Array.from(array).values()) 2`] = `

Message:
> 1 | new Set(Array.from(array).values())
    |                           ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | new Set(Array.from(array))

`;

exports[`prefer-direct-iteration > invalid(14): Array.from(Array.of(1, 2).values()) 1`] = `

  1 | Array.from(Array.of(1, 2).values())

`;

exports[`prefer-direct-iteration > invalid(14): Array.from(Array.of(1, 2).values()) 2`] = `

Message:
> 1 | Array.from(Array.of(1, 2).values())
    |                           ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | Array.from(Array.of(1, 2))

`;

exports[`prefer-direct-iteration > invalid(14): const [...entries] = new Map<string, string>(); [...entries.values()]; 1`] = `

Filename: file.ts

  1 | const [...entries] = new Map<string, string>(); [...entries.values()];

`;

exports[`prefer-direct-iteration > invalid(14): const [...entries] = new Map<string, string>(); [...entries.values()]; 2`] = `

Message:
> 1 | const [...entries] = new Map<string, string>(); [...entries.values()];
    |                                                             ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | const [...entries] = new Map<string, string>(); [...entries];

`;

exports[`prefer-direct-iteration > invalid(15): Array.from([1, 2].values(), value => value * 2) 1`] = `

  1 | Array.from([1, 2].values(), value => value * 2)

`;

exports[`prefer-direct-iteration > invalid(15): Array.from([1, 2].values(), value => value * 2) 2`] = `

Message:
> 1 | Array.from([1, 2].values(), value => value * 2)
    |                   ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | Array.from([1, 2], value => value * 2)

`;

exports[`prefer-direct-iteration > invalid(16): new Uint8Array([1, 2].values()) 1`] = `

  1 | new Uint8Array([1, 2].values())

`;

exports[`prefer-direct-iteration > invalid(16): new Uint8Array([1, 2].values()) 2`] = `

Message:
> 1 | new Uint8Array([1, 2].values())
    |                       ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | new Uint8Array([1, 2])

`;

exports[`prefer-direct-iteration > invalid(17): Uint8Array.from(new Uint8Array().values()) 1`] = `

  1 | Uint8Array.from(new Uint8Array().values())

`;

exports[`prefer-direct-iteration > invalid(17): Uint8Array.from(new Uint8Array().values()) 2`] = `

Message:
> 1 | Uint8Array.from(new Uint8Array().values())
    |                                  ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | Uint8Array.from(new Uint8Array())

`;

exports[`prefer-direct-iteration > invalid(18): Uint8Array.from([1, 2].values(), value => value * 2) 1`] = `

  1 | Uint8Array.from([1, 2].values(), value => value * 2)

`;

exports[`prefer-direct-iteration > invalid(18): Uint8Array.from([1, 2].values(), value => value * 2) 2`] = `

Message:
> 1 | Uint8Array.from([1, 2].values(), value => value * 2)
    |                        ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | Uint8Array.from([1, 2], value => value * 2)

`;

exports[`prefer-direct-iteration > invalid(19): Object.fromEntries(new Map().entries()) 1`] = `

  1 | Object.fromEntries(new Map().entries())

`;

exports[`prefer-direct-iteration > invalid(19): Object.fromEntries(new Map().entries()) 2`] = `

Message:
> 1 | Object.fromEntries(new Map().entries())
    |                              ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | Object.fromEntries(new Map())

`;

exports[`prefer-direct-iteration > invalid(2): for await (const item of new Set().values()) {} 1`] = `

  1 | for await (const item of new Set().values()) {}

`;

exports[`prefer-direct-iteration > invalid(2): for await (const item of new Set().values()) {} 2`] = `

Message:
> 1 | for await (const item of new Set().values()) {}
    |                                    ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | for await (const item of new Set()) {}

`;

exports[`prefer-direct-iteration > invalid(2): type Items = readonly string[]; function foo(items: Items) { return [...items.values()]; } 1`] = `

Filename: file.ts

  1 | type Items = readonly string[]; function foo(items: Items) { return [...items.values()]; }

`;

exports[`prefer-direct-iteration > invalid(2): type Items = readonly string[]; function foo(items: Items) { return [...items.values()]; } 2`] = `

Message:
> 1 | type Items = readonly string[]; function foo(items: Items) { return [...items.values()]; }
    |                                                                               ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | type Items = readonly string[]; function foo(items: Items) { return [...items]; }

`;

exports[`prefer-direct-iteration > invalid(20): Promise.all([promise].values()) 1`] = `

  1 | Promise.all([promise].values())

`;

exports[`prefer-direct-iteration > invalid(20): Promise.all([promise].values()) 2`] = `

Message:
> 1 | Promise.all([promise].values())
    |                       ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | Promise.all([promise])

`;

exports[`prefer-direct-iteration > invalid(21): Promise.allSettled([promise].values()) 1`] = `

  1 | Promise.allSettled([promise].values())

`;

exports[`prefer-direct-iteration > invalid(21): Promise.allSettled([promise].values()) 2`] = `

Message:
> 1 | Promise.allSettled([promise].values())
    |                              ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | Promise.allSettled([promise])

`;

exports[`prefer-direct-iteration > invalid(22): Promise.any([promise].values()) 1`] = `

  1 | Promise.any([promise].values())

`;

exports[`prefer-direct-iteration > invalid(22): Promise.any([promise].values()) 2`] = `

Message:
> 1 | Promise.any([promise].values())
    |                       ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | Promise.any([promise])

`;

exports[`prefer-direct-iteration > invalid(23): Promise.race([promise].values()) 1`] = `

  1 | Promise.race([promise].values())

`;

exports[`prefer-direct-iteration > invalid(23): Promise.race([promise].values()) 2`] = `

Message:
> 1 | Promise.race([promise].values())
    |                        ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | Promise.race([promise])

`;

exports[`prefer-direct-iteration > invalid(24): function * foo() {\n\tyield * new Set().values();\n} 1`] = `

  1 | function * foo() {
  2 | 	yield * new Set().values();
  3 | }

`;

exports[`prefer-direct-iteration > invalid(24): function * foo() {\n\tyield * new Set().values();\n} 2`] = `

Message:
  1 | function * foo() {
> 2 | 	yield * new Set().values();
    | 	                  ^^^^^^ Prefer direct iteration instead of \`.values()\`.
  3 | }

Output:
  1 | function * foo() {
  2 | 	yield * new Set();
  3 | }

`;

exports[`prefer-direct-iteration > invalid(25): const map = new Map();\nfor (const item of map.entries()) {} 1`] = `

  1 | const map = new Map();
  2 | for (const item of map.entries()) {}

`;

exports[`prefer-direct-iteration > invalid(25): const map = new Map();\nfor (const item of map.entries()) {} 2`] = `

Message:
  1 | const map = new Map();
> 2 | for (const item of map.entries()) {}
    |                        ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | const map = new Map();
  2 | for (const item of map) {}

`;

exports[`prefer-direct-iteration > invalid(26): const array = [1, 2, 3];\nconst set = new Set(array);\nPromise.all(set.values()); 1`] = `

  1 | const array = [1, 2, 3];
  2 | const set = new Set(array);
  3 | Promise.all(set.values());

`;

exports[`prefer-direct-iteration > invalid(26): const array = [1, 2, 3];\nconst set = new Set(array);\nPromise.all(set.values()); 2`] = `

Message:
  1 | const array = [1, 2, 3];
  2 | const set = new Set(array);
> 3 | Promise.all(set.values());
    |                 ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | const array = [1, 2, 3];
  2 | const set = new Set(array);
  3 | Promise.all(set);

`;

exports[`prefer-direct-iteration > invalid(27): const searchParameters = new URLSearchParams();\nObject.fromEntries(searchParameters.entries()); 1`] = `

  1 | const searchParameters = new URLSearchParams();
  2 | Object.fromEntries(searchParameters.entries());

`;

exports[`prefer-direct-iteration > invalid(27): const searchParameters = new URLSearchParams();\nObject.fromEntries(searchParameters.entries()); 2`] = `

Message:
  1 | const searchParameters = new URLSearchParams();
> 2 | Object.fromEntries(searchParameters.entries());
    |                                     ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | const searchParameters = new URLSearchParams();
  2 | Object.fromEntries(searchParameters);

`;

exports[`prefer-direct-iteration > invalid(28): [...(new Set()).values()] 1`] = `

  1 | [...(new Set()).values()]

`;

exports[`prefer-direct-iteration > invalid(28): [...(new Set()).values()] 2`] = `

Message:
> 1 | [...(new Set()).values()]
    |                 ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | [...(new Set())]

`;

exports[`prefer-direct-iteration > invalid(29): [...((new Map()).entries())] 1`] = `

  1 | [...((new Map()).entries())]

`;

exports[`prefer-direct-iteration > invalid(29): [...((new Map()).entries())] 2`] = `

Message:
> 1 | [...((new Map()).entries())]
    |                  ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | [...((new Map()))]

`;

exports[`prefer-direct-iteration > invalid(3): [...new Set().keys()] 1`] = `

  1 | [...new Set().keys()]

`;

exports[`prefer-direct-iteration > invalid(3): [...new Set().keys()] 2`] = `

Message:
> 1 | [...new Set().keys()]
    |               ^^^^ Prefer direct iteration instead of \`.keys()\`.

Output:
  1 | [...new Set()]

`;

exports[`prefer-direct-iteration > invalid(3): type Pairs = Map<string, string>; declare const pairs: Pairs; Object.fromEntries(pairs.entries()); 1`] = `

Filename: file.ts

  1 | type Pairs = Map<string, string>; declare const pairs: Pairs; Object.fromEntries(pairs.entries());

`;

exports[`prefer-direct-iteration > invalid(3): type Pairs = Map<string, string>; declare const pairs: Pairs; Object.fromEntries(pairs.entries()); 2`] = `

Message:
> 1 | type Pairs = Map<string, string>; declare const pairs: Pairs; Object.fromEntries(pairs.entries());
    |                                                                                        ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | type Pairs = Map<string, string>; declare const pairs: Pairs; Object.fromEntries(pairs);

`;

exports[`prefer-direct-iteration > invalid(30): function foo(array: string[]) { return [...array.values()]; } 1`] = `

  1 | function foo(array: string[]) { return [...array.values()]; }

`;

exports[`prefer-direct-iteration > invalid(30): function foo(array: string[]) { return [...array.values()]; } 2`] = `

Message:
> 1 | function foo(array: string[]) { return [...array.values()]; }
    |                                                  ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | function foo(array: string[]) { return [...array]; }

`;

exports[`prefer-direct-iteration > invalid(31): function foo(array: readonly string[]) { return [...array.values()]; } 1`] = `

  1 | function foo(array: readonly string[]) { return [...array.values()]; }

`;

exports[`prefer-direct-iteration > invalid(31): function foo(array: readonly string[]) { return [...array.values()]; } 2`] = `

Message:
> 1 | function foo(array: readonly string[]) { return [...array.values()]; }
    |                                                           ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | function foo(array: readonly string[]) { return [...array]; }

`;

exports[`prefer-direct-iteration > invalid(32): function foo(array: ReadonlyArray<string>) { return [...array.values()]; } 1`] = `

  1 | function foo(array: ReadonlyArray<string>) { return [...array.values()]; }

`;

exports[`prefer-direct-iteration > invalid(32): function foo(array: ReadonlyArray<string>) { return [...array.values()]; } 2`] = `

Message:
> 1 | function foo(array: ReadonlyArray<string>) { return [...array.values()]; }
    |                                                               ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | function foo(array: ReadonlyArray<string>) { return [...array]; }

`;

exports[`prefer-direct-iteration > invalid(33): function foo(array: [string, string]) { return [...array.values()]; } 1`] = `

  1 | function foo(array: [string, string]) { return [...array.values()]; }

`;

exports[`prefer-direct-iteration > invalid(33): function foo(array: [string, string]) { return [...array.values()]; } 2`] = `

Message:
> 1 | function foo(array: [string, string]) { return [...array.values()]; }
    |                                                          ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | function foo(array: [string, string]) { return [...array]; }

`;

exports[`prefer-direct-iteration > invalid(34): function foo(map: Map<string, string>) { return [...map.entries()]; } 1`] = `

  1 | function foo(map: Map<string, string>) { return [...map.entries()]; }

`;

exports[`prefer-direct-iteration > invalid(34): function foo(map: Map<string, string>) { return [...map.entries()]; } 2`] = `

Message:
> 1 | function foo(map: Map<string, string>) { return [...map.entries()]; }
    |                                                         ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | function foo(map: Map<string, string>) { return [...map]; }

`;

exports[`prefer-direct-iteration > invalid(35): function foo(map: ReadonlyMap<string, string>) { return Object.fromEntries(map.entries()); } 1`] = `

  1 | function foo(map: ReadonlyMap<string, string>) { return Object.fromEntries(map.entries()); }

`;

exports[`prefer-direct-iteration > invalid(35): function foo(map: ReadonlyMap<string, string>) { return Object.fromEntries(map.entries()); } 2`] = `

Message:
> 1 | function foo(map: ReadonlyMap<string, string>) { return Object.fromEntries(map.entries()); }
    |                                                                                ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | function foo(map: ReadonlyMap<string, string>) { return Object.fromEntries(map); }

`;

exports[`prefer-direct-iteration > invalid(36): function foo(set: Set<string>) { return [...set.keys()]; } 1`] = `

  1 | function foo(set: Set<string>) { return [...set.keys()]; }

`;

exports[`prefer-direct-iteration > invalid(36): function foo(set: Set<string>) { return [...set.keys()]; } 2`] = `

Message:
> 1 | function foo(set: Set<string>) { return [...set.keys()]; }
    |                                                 ^^^^ Prefer direct iteration instead of \`.keys()\`.

Output:
  1 | function foo(set: Set<string>) { return [...set]; }

`;

exports[`prefer-direct-iteration > invalid(37): function foo(set: ReadonlySet<string>) { return [...set.values()]; } 1`] = `

  1 | function foo(set: ReadonlySet<string>) { return [...set.values()]; }

`;

exports[`prefer-direct-iteration > invalid(37): function foo(set: ReadonlySet<string>) { return [...set.values()]; } 2`] = `

Message:
> 1 | function foo(set: ReadonlySet<string>) { return [...set.values()]; }
    |                                                         ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | function foo(set: ReadonlySet<string>) { return [...set]; }

`;

exports[`prefer-direct-iteration > invalid(38): function foo(searchParameters: URLSearchParams) { return [...searchParameters.entries()]; } 1`] = `

  1 | function foo(searchParameters: URLSearchParams) { return [...searchParameters.entries()]; }

`;

exports[`prefer-direct-iteration > invalid(38): function foo(searchParameters: URLSearchParams) { return [...searchParameters.entries()]; } 2`] = `

Message:
> 1 | function foo(searchParameters: URLSearchParams) { return [...searchParameters.entries()]; }
    |                                                                               ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | function foo(searchParameters: URLSearchParams) { return [...searchParameters]; }

`;

exports[`prefer-direct-iteration > invalid(39): function foo(formData: FormData) { return [...formData.entries()]; } 1`] = `

  1 | function foo(formData: FormData) { return [...formData.entries()]; }

`;

exports[`prefer-direct-iteration > invalid(39): function foo(formData: FormData) { return [...formData.entries()]; } 2`] = `

Message:
> 1 | function foo(formData: FormData) { return [...formData.entries()]; }
    |                                                        ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | function foo(formData: FormData) { return [...formData]; }

`;

exports[`prefer-direct-iteration > invalid(4): [...new Map().entries()] 1`] = `

  1 | [...new Map().entries()]

`;

exports[`prefer-direct-iteration > invalid(4): [...new Map().entries()] 2`] = `

Message:
> 1 | [...new Map().entries()]
    |               ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | [...new Map()]

`;

exports[`prefer-direct-iteration > invalid(4): type Pairs = ReadonlyMap<string, string>; declare const pairs: Pairs; Object.fromEntries(pairs.entries()); 1`] = `

Filename: file.ts

  1 | type Pairs = ReadonlyMap<string, string>; declare const pairs: Pairs; Object.fromEntries(pairs.entries());

`;

exports[`prefer-direct-iteration > invalid(4): type Pairs = ReadonlyMap<string, string>; declare const pairs: Pairs; Object.fromEntries(pairs.entries()); 2`] = `

Message:
> 1 | type Pairs = ReadonlyMap<string, string>; declare const pairs: Pairs; Object.fromEntries(pairs.entries());
    |                                                                                                ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | type Pairs = ReadonlyMap<string, string>; declare const pairs: Pairs; Object.fromEntries(pairs);

`;

exports[`prefer-direct-iteration > invalid(40): function foo(array: Uint8Array) { return [...array.values()]; } 1`] = `

  1 | function foo(array: Uint8Array) { return [...array.values()]; }

`;

exports[`prefer-direct-iteration > invalid(40): function foo(array: Uint8Array) { return [...array.values()]; } 2`] = `

Message:
> 1 | function foo(array: Uint8Array) { return [...array.values()]; }
    |                                                    ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | function foo(array: Uint8Array) { return [...array]; }

`;

exports[`prefer-direct-iteration > invalid(41): function foo(iterable: string[] | Set<string>) { return [...iterable.values()]; } 1`] = `

  1 | function foo(iterable: string[] | Set<string>) { return [...iterable.values()]; }

`;

exports[`prefer-direct-iteration > invalid(41): function foo(iterable: string[] | Set<string>) { return [...iterable.values()]; } 2`] = `

Message:
> 1 | function foo(iterable: string[] | Set<string>) { return [...iterable.values()]; }
    |                                                                      ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | function foo(iterable: string[] | Set<string>) { return [...iterable]; }

`;

exports[`prefer-direct-iteration > invalid(42): function foo(iterable: Map<string, string> | URLSearchParams) { return [...iterable.entries()]; } 1`] = `

  1 | function foo(iterable: Map<string, string> | URLSearchParams) { return [...iterable.entries()]; }

`;

exports[`prefer-direct-iteration > invalid(42): function foo(iterable: Map<string, string> | URLSearchParams) { return [...iterable.entries()]; } 2`] = `

Message:
> 1 | function foo(iterable: Map<string, string> | URLSearchParams) { return [...iterable.entries()]; }
    |                                                                                     ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | function foo(iterable: Map<string, string> | URLSearchParams) { return [...iterable]; }

`;

exports[`prefer-direct-iteration > invalid(43): const array = foo as string[]; const values = [...array.values()]; 1`] = `

  1 | const array = foo as string[]; const values = [...array.values()];

`;

exports[`prefer-direct-iteration > invalid(43): const array = foo as string[]; const values = [...array.values()]; 2`] = `

Message:
> 1 | const array = foo as string[]; const values = [...array.values()];
    |                                                         ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | const array = foo as string[]; const values = [...array];

`;

exports[`prefer-direct-iteration > invalid(44): const values = [...(foo satisfies string[]).values()]; 1`] = `

  1 | const values = [...(foo satisfies string[]).values()];

`;

exports[`prefer-direct-iteration > invalid(44): const values = [...(foo satisfies string[]).values()]; 2`] = `

Message:
> 1 | const values = [...(foo satisfies string[]).values()];
    |                                             ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | const values = [...(foo satisfies string[])];

`;

exports[`prefer-direct-iteration > invalid(45): const values = [...(<string[]>foo).values()]; 1`] = `

  1 | const values = [...(<string[]>foo).values()];

`;

exports[`prefer-direct-iteration > invalid(45): const values = [...(<string[]>foo).values()]; 2`] = `

Message:
> 1 | const values = [...(<string[]>foo).values()];
    |                                    ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | const values = [...(<string[]>foo)];

`;

exports[`prefer-direct-iteration > invalid(46): const foo = [] as string[]; const values = [...foo!.values()]; 1`] = `

  1 | const foo = [] as string[]; const values = [...foo!.values()];

`;

exports[`prefer-direct-iteration > invalid(46): const foo = [] as string[]; const values = [...foo!.values()]; 2`] = `

Message:
> 1 | const foo = [] as string[]; const values = [...foo!.values()];
    |                                                     ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | const foo = [] as string[]; const values = [...foo!];

`;

exports[`prefer-direct-iteration > invalid(47): [...new Set().values(/* keep */)] 1`] = `

  1 | [...new Set().values(/* keep */)]

`;

exports[`prefer-direct-iteration > invalid(47): [...new Set().values(/* keep */)] 2`] = `

Message:
> 1 | [...new Set().values(/* keep */)]
    |               ^^^^^^ Prefer direct iteration instead of \`.values()\`.

`;

exports[`prefer-direct-iteration > invalid(48): for (const item of Array(3).values()) {} 1`] = `

  1 | for (const item of Array(3).values()) {}

`;

exports[`prefer-direct-iteration > invalid(48): for (const item of Array(3).values()) {} 2`] = `

Message:
> 1 | for (const item of Array(3).values()) {}
    |                             ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | for (const item of Array(3)) {}

`;

exports[`prefer-direct-iteration > invalid(49): for (const byte of Uint8Array.from(bytes).values()) {} 1`] = `

  1 | for (const byte of Uint8Array.from(bytes).values()) {}

`;

exports[`prefer-direct-iteration > invalid(49): for (const byte of Uint8Array.from(bytes).values()) {} 2`] = `

Message:
> 1 | for (const byte of Uint8Array.from(bytes).values()) {}
    |                                           ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | for (const byte of Uint8Array.from(bytes)) {}

`;

exports[`prefer-direct-iteration > invalid(5): [...new URLSearchParams().entries()] 1`] = `

  1 | [...new URLSearchParams().entries()]

`;

exports[`prefer-direct-iteration > invalid(5): [...new URLSearchParams().entries()] 2`] = `

Message:
> 1 | [...new URLSearchParams().entries()]
    |                           ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | [...new URLSearchParams()]

`;

exports[`prefer-direct-iteration > invalid(5): type Values = ReadonlySet<string>; declare const values: Values; [...values.values()]; 1`] = `

Filename: file.ts

  1 | type Values = ReadonlySet<string>; declare const values: Values; [...values.values()];

`;

exports[`prefer-direct-iteration > invalid(5): type Values = ReadonlySet<string>; declare const values: Values; [...values.values()]; 2`] = `

Message:
> 1 | type Values = ReadonlySet<string>; declare const values: Values; [...values.values()];
    |                                                                             ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | type Values = ReadonlySet<string>; declare const values: Values; [...values];

`;

exports[`prefer-direct-iteration > invalid(50): const items = [1, 2, 3]; const values = [...(items as Items).values()]; 1`] = `

  1 | const items = [1, 2, 3]; const values = [...(items as Items).values()];

`;

exports[`prefer-direct-iteration > invalid(50): const items = [1, 2, 3]; const values = [...(items as Items).values()]; 2`] = `

Message:
> 1 | const items = [1, 2, 3]; const values = [...(items as Items).values()];
    |                                                              ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | const items = [1, 2, 3]; const values = [...(items as Items)];

`;

exports[`prefer-direct-iteration > invalid(6): [...new FormData().entries()] 1`] = `

  1 | [...new FormData().entries()]

`;

exports[`prefer-direct-iteration > invalid(6): [...new FormData().entries()] 2`] = `

Message:
> 1 | [...new FormData().entries()]
    |                    ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | [...new FormData()]

`;

exports[`prefer-direct-iteration > invalid(6): type Entries = Map<string, string> | URLSearchParams; function foo(entries: Entries) { return [...entries.entries()]; } 1`] = `

Filename: file.ts

  1 | type Entries = Map<string, string> | URLSearchParams; function foo(entries: Entries) { return [...entries.entries()]; }

`;

exports[`prefer-direct-iteration > invalid(6): type Entries = Map<string, string> | URLSearchParams; function foo(entries: Entries) { return [...entries.entries()]; } 2`] = `

Message:
> 1 | type Entries = Map<string, string> | URLSearchParams; function foo(entries: Entries) { return [...entries.entries()]; }
    |                                                                                                           ^^^^^^^ Prefer direct iteration instead of \`.entries()\`.

Output:
  1 | type Entries = Map<string, string> | URLSearchParams; function foo(entries: Entries) { return [...entries]; }

`;

exports[`prefer-direct-iteration > invalid(7): [...new Uint8Array().values()] 1`] = `

  1 | [...new Uint8Array().values()]

`;

exports[`prefer-direct-iteration > invalid(7): [...new Uint8Array().values()] 2`] = `

Message:
> 1 | [...new Uint8Array().values()]
    |                      ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | [...new Uint8Array()]

`;

exports[`prefer-direct-iteration > invalid(7): type Values = string[] | Set<string>; function foo(values: Values) { return [...values.values()]; } 1`] = `

Filename: file.ts

  1 | type Values = string[] | Set<string>; function foo(values: Values) { return [...values.values()]; }

`;

exports[`prefer-direct-iteration > invalid(7): type Values = string[] | Set<string>; function foo(values: Values) { return [...values.values()]; } 2`] = `

Message:
> 1 | type Values = string[] | Set<string>; function foo(values: Values) { return [...values.values()]; }
    |                                                                                        ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | type Values = string[] | Set<string>; function foo(values: Values) { return [...values]; }

`;

exports[`prefer-direct-iteration > invalid(8): call(...new Array().values()) 1`] = `

  1 | call(...new Array().values())

`;

exports[`prefer-direct-iteration > invalid(8): call(...new Array().values()) 2`] = `

Message:
> 1 | call(...new Array().values())
    |                     ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | call(...new Array())

`;

exports[`prefer-direct-iteration > invalid(8): type Bytes = Uint8Array; declare const bytes: Bytes; [...bytes.values()]; 1`] = `

Filename: file.ts

  1 | type Bytes = Uint8Array; declare const bytes: Bytes; [...bytes.values()];

`;

exports[`prefer-direct-iteration > invalid(8): type Bytes = Uint8Array; declare const bytes: Bytes; [...bytes.values()]; 2`] = `

Message:
> 1 | type Bytes = Uint8Array; declare const bytes: Bytes; [...bytes.values()];
    |                                                                ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | type Bytes = Uint8Array; declare const bytes: Bytes; [...bytes];

`;

exports[`prefer-direct-iteration > invalid(9): declare function getItems(): string[]; const items = getItems(); [...items.values()]; 1`] = `

Filename: file.ts

  1 | declare function getItems(): string[]; const items = getItems(); [...items.values()];

`;

exports[`prefer-direct-iteration > invalid(9): declare function getItems(): string[]; const items = getItems(); [...items.values()]; 2`] = `

Message:
> 1 | declare function getItems(): string[]; const items = getItems(); [...items.values()];
    |                                                                            ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | declare function getItems(): string[]; const items = getItems(); [...items];

`;

exports[`prefer-direct-iteration > invalid(9): new Set(...new Array().values()) 1`] = `

  1 | new Set(...new Array().values())

`;

exports[`prefer-direct-iteration > invalid(9): new Set(...new Array().values()) 2`] = `

Message:
> 1 | new Set(...new Array().values())
    |                        ^^^^^^ Prefer direct iteration instead of \`.values()\`.

Output:
  1 | new Set(...new Array())

`;
